--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -96,6 +96,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/descarga-cv.js"></script>
+  <script src="assets/js/copiar-correo.js"></script>
 
 </body>
 
