--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                 aria-valuemax="100"></div>
-                        </div>
+                            </div>
                     </div>
 
                 </div>
@@ -366,16 +366,28 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="https://mjarancibiasuazo.github.io/proyecto-ecommerce/" target="_blank">Proyecto
-                                Ecommerce</a></h4>
-                        <p>Proyecto ecommerce realizado con PHP, JavaScript y Mysql.</p>
+                        <img src="assets/img/app.png" style="border-radius: 5px; "height="200px" width="300px"></img>
+                        <h4><a href="https://github.com/mjarancibiasuazo/app-futbolito" target="_blank">Proyecto Futbolito</a></h4>
+                        <p style="text-align: left;">Aplicación Móvil que organiza torneos de baby Futbol.</p>
+                        <div id="etiquetas">
+                            <span class="badge badge-info">JavaScript</span>
+                            <span class="badge badge-info">React Native</span>
+                            <span class="badge badge-info">Expo</span>
+                            <span class="badge badge-info">Firebase</span>
+                            <span class="badge badge-info">API Rest</span>
+                        </div>
+                        <div id="social">
+                            <a href="https://github.com/mjarancibiasuazo/app-futbolito" target="_blank"><span target="_blank" data-toggle="tooltip"
+                                data-placement="left" title="Ver repositorio" id="git" class="mdi mdi-github"></span></a>
+                            <a href="https://www.youtube.com/watch?v=7CJGmWcFens" target="_blank"><span target="_blank" data-toggle="tooltip"
+                                data-placement="left" title="Ver Proyecto" id="youtube" class="mdi mdi-youtube"></span></a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-file"></i></div>
+                        
                         <h4><a href="https://github.com/mjarancibiasuazo/portafolio-profesional-react"
                                 target="_blank">Proyecto Portafolio</a></h4>
                         <p>Página Web realizado HTML, CSS, JavaScript y React JS.</p>
@@ -384,7 +396,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-file"></i></div>
+                        
                         <h4><a href="https://github.com/mjarancibiasuazo/mi-blog">Proyecto Mi Blog</a></h4>
                         <p>Página Web Realizado con HTML, CSS, JavaScript y React JS.</p>
                     </div>
