--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         </h4>
                         <!-- Agrega un formulario oculto -->
                         <form id="downloadForm"
-                            action="file:///C:/Users/jaran/OneDrive/Documentos/CV%20MJ%202024/CV%20MJARANCIBIA-2024.pdf"
+                            action="https://github.com/mjarancibiasuazo/cv-mjarancibia-24/blob/cf9096c2bd7281011bb0c2a226c34d2d9927c867/cv-mjarancibia-24.pdf"
                             method="get" target="_blank" style="display: none;">
                             <button type="submit" id="downloadButton"></button>
                         </form>
