--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         </h4>
                         <!-- Agrega un formulario oculto -->
                         <form id="downloadForm"
-                            action="https://github.com/mjarancibiasuazo/cv-mjarancibia-24/blob/cf9096c2bd7281011bb0c2a226c34d2d9927c867/cv-mjarancibia-24.pdf"
+                            action="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing"
                             method="get" target="_blank" style="display: none;">
                             <button type="submit" id="downloadButton"></button>
                         </form>
