--- a/index.html
+++ b/index.html
@@ -308,11 +308,13 @@
                                 <i class="icofont-download"></i></a>
                         </h4>
                         <!-- Agrega un formulario oculto -->
-                        <form id="downloadForm"
-                            action="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing"
-                            method="get" target="_blank" style="display: none;">
-                            <button type="submit" id="downloadButton"></button>
-                        </form>
+                        <div>
+                            <div>
+                                <!-- Agrega un enlace directo al CV en Google Drive -->
+                                <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" target="_blank" rel="noopener noreferrer">Descargar CV</a>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
 
