--- a/index.html
+++ b/index.html
@@ -303,18 +303,16 @@
                     </div>
                     <div class="resume-descarga">
                         <h4>Descargar CV
-                            <a href="#" id="descargarCV" data-toggle="tooltip" data-placement="left"
+                            <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" id="descargarCV" data-toggle="tooltip" data-placement="left"
                                 title="Descargar CV">
                                 <i class="icofont-download"></i></a>
                         </h4>
                         <!-- Agrega un formulario oculto -->
-                        <div>
-                            <div>
-                                <!-- Agrega un enlace directo al CV en Google Drive -->
-                                <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" target="_blank" rel="noopener noreferrer">Descargar CV</a>
-                            </div>
-                        </div>
-                        
+                        <!-- <form id="downloadForm"
+                            action="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing"
+                            method="get" target="_blank" style="display: none;">
+                            <button type="submit" id="downloadButton"></button>
+                        </form> -->
                     </div>
                 </div>
 
