--- a/index.html
+++ b/index.html
@@ -303,9 +303,12 @@
                     </div>
                     <div class="resume-descarga">
                         <h4>Descargar CV
-                            <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" id="descargarCV" data-toggle="tooltip" data-placement="left"
-                                title="Descargar CV">
-                                <i class="icofont-download"></i></a>
+                            <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" 
+                            id="descargarCV" 
+                            data-toggle="tooltip" 
+                            data-placement="left"
+                            title="Descargar CV">
+                            <i class="icofont-download"></i></a>
                         </h4>
                         <!-- Agrega un formulario oculto -->
                         <!-- <form id="downloadForm"
