--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
                         <h4>Descargar CV
                             <a href="https://drive.google.com/file/d/1cb1BLRq8u03DDBl7bbMmm90YzTpd82tw/view?usp=sharing" 
                             id="descargarCV" 
+                            target="_blank"
                             data-toggle="tooltip" 
                             data-placement="left"
                             title="Descargar CV">
