--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
                     <div class="resume-descarga">
                         <h4>Descargar CV
-                            <a href="https://drive.google.com/file/d/1npYVl604vovIklSS2Y27pCdy4XOZQmpF/view?usp=sharing" 
+                            <a href="https://drive.google.com/file/d/1fivOmcEFyAH6Xy_-RoFUpu9SxAS1X8p1/view?usp=drive_link" 
                             id="descargarCV" 
                             target="_blank"
                             data-toggle="tooltip" 
