cambios de proyectos del portafolio

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 <!-- PROYECTO DE TITULO APP MÓVIL FUTBOLITO -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
-                        <img src="assets/img/app.png" style="border-radius: 5px; " height="200px" width="300px"></img>
+                        <img src="assets/img/app.png" style="border-radius: 5px;" height="200px" width="300px"></img>
                         <h4>Proyecto Futbolito</h4>
                         <p style="text-align: left;">Aplicación Móvil que organiza torneos de baby Futbol.</p>
                         <div id="etiquetas">
@@ -399,20 +399,29 @@
                 <!-- SEGUNDO PROYECTO -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                     <div class="icon-box">
-                        <img src="assets/img/portafolio-react-f.png" style="border-radius: 5px; " height="200px"
-                            width="300px"></img>
-                        <h4>Proyeto Portafolio</h4>
-                        <p style="text-align: left;">Proyecto portafolio personal realizado en curso de React.JS de
-                            Udemy</p>
+                        <img src="assets/img/control-de-gastos.png" style="border-radius: 5px; " height="200px"
+                            width="200px"></img>
+                        <h4>Planificador de Gastos</h4>
+                        <p style="text-align: left;">Proyecto de planificación de gastos desarrollado con los hooks useReducer 
+                        y useContext</p>
                         <div id="etiquetas">
+                            <span class="badge badge-info">TypeScript</span>
                             <span class="badge badge-info">React.JS</span>
+                            <span class="badge badge-info">Vite</span>
                             <span class="badge badge-info">Node.JS</span>
+                            <span class="badge badge-info">Tailwind</span>
                         </div>
                         <br>
                         <div id="social">
                             <a href="https://github.com/mjarancibiasuazo/portafolio-profesional-react"
                                 target="_blank"><span target="_blank" data-toggle="tooltip" data-placement="left"
-                                    title="Ver repositorio" id="git" class="mdi mdi-github"></span></a>
+                                    title="Ver repositorio" id="git" class="mdi mdi-github"></span>
+                            </a>
+                            <a href="https://flourishing-boba-a92727.netlify.app/"
+                            target="_blank"><span target="_blank" data-toggle="tooltip" data-placement="left"
+                                title="Ver repositorio" id="git" class="mdi mdi-alpha-n-box"></span>
+                            </a>
+                           
                         </div>
                     </div>
                 </div>
@@ -425,6 +434,7 @@
                         <p style="text-align: left;">Proyecto de Blog de Lenguajes de Programación realizado en un curso
                             de React.JS de Udemy</p>
                         <div id="etiquetas">
+                            <span class="badge badge-info">JavaScript</span>
                             <span class="badge badge-info">React.JS</span>
                             <span class="badge badge-info">Vite</span>
                             <span class="badge badge-info">Node.JS</span>
