cambios en proyecto futbolito

--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
                     <div class="icon-box">
                         <img src="assets/img/app.png" style="border-radius: 5px;" height="200px" width="300px"></img>
                         <h4>Proyecto Futbolito</h4>
-                        <p style="text-align: left;">Aplicación Móvil que organiza torneos de baby Futbol.</p>
+                        <p style="text-align: left;">Proyecto de titulo de aplicación móvil que organiza torneos de baby Futbol. 
+                            En este proyecto usamos Expo para usar la galeria de imagenes del móvil, también utilzamos la Api de Google para geolocalizar las canchas de los torneos.</p>
                         <div id="etiquetas">
                             <span class="badge badge-info">JavaScript</span>
                             <span class="badge badge-info">React Native</span>
