cambios en la desc del nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -402,9 +402,11 @@
                     <div class="icon-box">
                         <img src="assets/img/planificador-de-gastos.png" style="border-radius: 5px; " height="200px"
                             width="200px"></img>
-                        <h4>Planificador de Gastos</h4>
-                        <p style="text-align: left;">Proyecto de planificación de gastos desarrollado con los hooks useReducer 
-                        y useContext</p>
+                        <h4>Planificador de Gastos y Presupuestos</h4>
+                        <p style="text-align: left;">Proyecto de planificación de gastos y presupuestos personal. En este proyecto 
+                            más complejo utilizamos los hooks de estados useReducer y useContext. Esta diseñado con el framework de CSS3 
+                            Tailwind y para el gráfico de gastos usamos la libreria de React.js circular progressbar .
+                        </p>
                         <div id="etiquetas">
                             <span class="badge badge-info">TypeScript</span>
                             <span class="badge badge-info">React.JS</span>
