--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
                             <span class="badge badge-info">Expo</span>
                             <span class="badge badge-info">Firebase</span>
                             <span class="badge badge-info">API Rest</span>
+                            <span class="badge badge-info">CSS3</span>
                         </div>
                         <div id="social">
                             <a href="https://github.com/mjarancibiasuazo/app-futbolito" target="_blank"><span
