cambios en el tercer proyecto

--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
                             width="300px"></img>
                         <h4>Proyecto Mi Blog</h4>
                         <p style="text-align: left;">Proyecto de Blog de Lenguajes de Programación realizado en un curso
-                            de React.JS de Udemy</p>
+                            de React.js de Udemy. En este proyecto configuramos los componentes y el sistema de rutas de React Routing, 
+                        también usamos helpers para la peticiones ajax con fecth. Para el estilo del blog usamos CSS3. </p>
                         <div id="etiquetas">
                             <span class="badge badge-info">JavaScript</span>
                             <span class="badge badge-info">React.JS</span>
@@ -444,6 +445,7 @@
                             <span class="badge badge-info">Node.JS</span>
                             <span class="badge badge-info">Express.JS</span>
                             <span class="badge badge-info">MongoDB</span>
+                            <span class="badge badge-info">CSS3</span>
                         </div>
                         <div id="social">
                             <a href="https://github.com/mjarancibiasuazo/mi-blog" target="_blank"><span target="_blank"
