--- a/index.html
+++ b/index.html
@@ -450,16 +450,13 @@
                             </a>
                             <a href="https://668c5c7a901f91bb1ac10ac8--quiet-pudding-e9951f.netlify.app/"
                             target="_blank"><span target="_blank" data-toggle="tooltip" data-placement="left"
-                                title="Ver repositorio" id="git" class="mdi mdi-alpha-n-box"></span>
+                                title="Ver Proyecto" id="git" class="mdi mdi-alpha-n-box"></span>
                             </a>
                            
                         </div>
                     </div>
                 </div>
                 
-
-
-
             </div>
 
         </div>
