cambios en el portafolio

--- a/index.html
+++ b/index.html
@@ -374,12 +374,17 @@
 
             <div class="row">
                 <!-- PROYECTO DE TITULO APP MÓVIL FUTBOLITO -->
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-0 mt-lg-0">
                     <div class="icon-box">
-                        <img src="assets/img/app.png" style="border-radius: 5px;" height="200px" width="300px"></img>
+                        <img src="assets/img/app-3.png" style="border-radius: 5px;" height="200px" width="300px"></img>
+                        <br>
+                        <br>
                         <h4>Proyecto Futbolito</h4>
-                        <p style="text-align: left;">Proyecto de titulo de aplicación móvil que organiza torneos de baby Futbol. 
-                            En este proyecto usamos Expo para usar la galeria de imagenes del móvil, también utilzamos la Api de Google para geolocalizar las canchas de los torneos.</p>
+                        <p style="text-align: left;">
+                            Proyecto de titulo de aplicación móvil que organiza torneos de baby Futbol. 
+                            En este proyecto usamos Expo para usar la galeria de imagenes del móvil, también utilzamos la Api 
+                            de Google para geolocalizar las canchas de los torneos.
+                        </p>
                         <div id="etiquetas">
                             <span class="badge badge-info">JavaScript</span>
                             <span class="badge badge-info">React Native</span>
@@ -402,43 +407,19 @@
                 <!-- SEGUNDO PROYECTO -->
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
-                        <img src="assets/img/mi-blog-react.png" style="border-radius: 5px; " height="200px"
-                            width="300px"></img>
-                        <h4>Proyecto Mi Blog</h4>
-                        <p style="text-align: left;">Proyecto de Blog de Lenguajes de Programación realizado en un curso
-                            de React.js de Udemy. En este proyecto configuramos los componentes y el sistema de rutas de React Routing, 
-                        también usamos helpers para la peticiones ajax con fecth. Para el estilo del blog usamos CSS3. </p>
-                        <div id="etiquetas">
-                            <span class="badge badge-info">JavaScript</span>
-                            <span class="badge badge-info">React.JS</span>
-                            <span class="badge badge-info">Vite</span>
-                            <span class="badge badge-info">Node.JS</span>
-                            <span class="badge badge-info">Express.JS</span>
-                            <span class="badge badge-info">MongoDB</span>
-                            <span class="badge badge-info">CSS3</span>
-                        </div>
-                        <div id="social">
-                            <a href="https://github.com/mjarancibiasuazo/mi-blog" target="_blank"><span target="_blank"
-                                    data-toggle="tooltip" data-placement="left" title="Ver repositorio" id="git"
-                                    class="mdi mdi-github"></span></a>
-
-                        </div>
-                    </div>
-                </div>
-                <!-- TERCER PROYECTO -->
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-                    <div class="icon-box">
-                        <img src="assets/img/planificador-de-gastos.png" style="border-radius: 5px; " height="200px"
-                            width="200px"></img>
+                        <img src="assets/img/administrador-gastos.png" style="border-radius: 5px;" height="200px" width="300px"></img>
+                        <br>
+                        <br>
                         <h4>Planificador de Gastos y Presupuestos</h4>
-                        <p style="text-align: left;">Proyecto de planificación de gastos y presupuestos personal. En este proyecto 
+                        <p style="text-align: left;">
+                            Proyecto de planificación de gastos y presupuestos personal. En este proyecto 
                             más complejo utilizamos los hooks de estados useReducer y useContext. Esta diseñado con el framework de CSS3 
                             Tailwind y para el gráfico de gastos usamos la libreria de React.js circular progressbar .
                         </p>
                         <div id="etiquetas">
                             <span class="badge badge-info">TypeScript</span>
-                            <span class="badge badge-info">React.JS</span>
                             <span class="badge badge-info">Vite</span>
+                            <span class="badge badge-info">React.JS</span>
                             <span class="badge badge-info">Node.JS</span>
                             <span class="badge badge-info">Tailwind</span>
                         </div>
@@ -456,9 +437,40 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- TERCER PROYECTO -->
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <img src="assets/img/admin-4.png" style="border-radius: 5px;" height="200px" width="300px"></img>
+                        <br>
+                        <br>
+                        <h4>Proyecto Administrador de Pacientes</h4>
+                        <p style="text-align: left;">
+                            Proyecto de registro de pacientes de una veterinaria en donde podemos agregar, editar y eliminar pacientes. 
+                            En este proyecto usamos para controlar el estado global la libreria de estados Zustand. Tambien usamos la libreria de 
+                            alertas Toastify para avisar los registros agregados y eliminados.
+                        </p>
+                        <div id="etiquetas">
+                            <span class="badge badge-info">TypeScript</span>
+                            <span class="badge badge-info">Vite</span>
+                            <span class="badge badge-info">React.JS</span>
+                            <span class="badge badge-info">Node.JS</span>
+                            <span class="badge badge-info">Tailwind</span>
+                        </div>
+                        <div id="social">
+                        <a href="https://github.com/mjarancibiasuazo/mi-blog" target="_blank"><span target="_blank"
+                            data-toggle="tooltip" data-placement="left" title="Ver repositorio" id="git"
+                            class="mdi mdi-github"></span>
+                        </a>
+                        <a href="https://sprightly-starburst-601ccc.netlify.app/"
+                        target="_blank"><span target="_blank" data-toggle="tooltip" data-placement="left"
+                            title="Ver Proyecto" id="git" class="mdi mdi-alpha-n-box"></span>
+                        </a>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
-
         </div>
     </section>
 
